Bug 299646 - Dolphin is silent about filename being too long when using rename command
Summary: Dolphin is silent about filename being too long when using rename command
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 19:26 UTC by Alexander Kandaurov
Modified: 2013-06-22 07:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Kandaurov 2012-05-08 19:26:01 UTC
When using the Rename command from the File or context menu, Dolphin shows no error message if the filename is too long and instead just silently refuses to perform the rename.

Reproducible: Always

Steps to Reproduce:
1. Select a file in Dolphin and choose File > Rename.
2. Enter a name long enough to exceed the maximum length of the file system, press Enter.
Actual Results:  
The file is not renamed and no message says about the reason why.

Expected Results:  
An error message saying that the file name is too long or some other behaviour like truncating the entered name and displaying a warning about it, but in any case the user should be warned that the entered filename is too long.

Renaming the file through the Properties dialog does show the error message though it doesn't indicate the cause of the error.
Comment 1 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:18:24 UTC
Resetting assignee to default as per bug #305719
Comment 2 Jekyll Wu 2012-08-30 13:47:54 UTC
I tried this using dolphin 2.1 (only support inline renaming now). A error dialog is shown: "Couldn't rename file xxxxx".
Comment 3 Frank Reininghaus 2013-06-22 07:22:41 UTC
Git commit cafbdb59df98395ea56fe8c1e5da651d87036b5e by Frank Reininghaus.
Committed on 22/06/2013 at 07:19.
Pushed by freininghaus into branch 'master'.

Enable KIO error reporting when renaming with the dialog

The problem was that the KonqOperations object did not have the right
parent.
FIXED-IN: 4.11.0
REVIEW: 111111

M  +14   -2    dolphin/src/views/renamedialog.cpp

http://commits.kde.org/kde-baseapps/cafbdb59df98395ea56fe8c1e5da651d87036b5e